src/test/ui/cfg-non-opt-expr.stderr
error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:4:13
   |
LL |     let _ = #[cfg(unset)] ();
   |             ^^^^^^^^^^^^^

error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:6:21
   |
LL |     let _ = 1 + 2 + #[cfg(unset)] 3;
   |                     ^^^^^^^^^^^^^

error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:8:23
   |
LL |     let _ = [1, 2, 3][#[cfg(unset)] 1];
   |                       ^^^^^^^^^^^^^

error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:10:13
   |
LL |     let _ = #[test] ();
   |             ^^^^^^^

error: aborting due to 4 previous errors

